# ModbusPy

./: README.md  pyproject.toml
modbuspy/: bithandler.py  mdbtype.py  modbuserror.py  modbustype.py  server.py  slave.py  utils.py
tests/: test_bithandler.py  test_modbustype.py  test_slave.py
