[tool.poetry]
name = "modbuspy"
version = "0.1.0"
description = "Library python for modbus"
authors = ["tuscaonline <tuscaonline@gmail.com>"]
license = "GPL"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
